<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:padding="35dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/login_img_logo"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:layout_width="200dp"
                android:layout_height="200dp"></ImageView>
                <!--app:srcCompat="@drawable/img_app_logo" />-->

            <EditText
                android:id="@+id/login_user_id"
                android:drawableLeft="@drawable/ic_person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/user_id" />

            <EditText
                android:id="@+id/login_password"
                android:drawableLeft="@drawable/ic_lock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password" />

            <Button
                android:id="@+id/login_login_btn"
                android:text="@string/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/login_register_btn"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center"
                android:text="@string/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>